fixing modal z-index

--- a/Unosquare.Blazorific/wwwroot/candymodal.css
+++ b/Unosquare.Blazorific/wwwroot/candymodal.css
@@ -7,7 +7,6 @@
     height: 100%;
     left: 0;
     top: 0;
-    z-index: 1050;
 }
 
 .candymodal-overlay {
@@ -17,6 +16,10 @@
     height: 100%;
     background-color: rgba(0,0,0,0.5);
     z-index: 1040;
+}
+
+.candymodal-content {
+    z-index: 1050;
 }
 
 .candymodal-active {
